src/grammar/PoleLangParser.java
// Generated from grammar/PoleLang.g4 by ANTLR 4.7

package grammar;
import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PoleLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, Print=3, To=4, If=5, For=6, ForIndex=7, Add=8, Copy=9, 
		Split=10, Line=11, Head=12, Info=13, Exists=14, With=15, MaxColumn=16, 
		MinColumn=17, SumColumn=18, FormatSize=19, MegaBytes=20, Bytes=21, KiloBytes=22, 
		GigaBytes=23, End=24, Number=25, FileNameText=26, ID=27, StringInput=28, 
		Ws=29;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_actionStatement = 2, RULE_printAction = 3, 
		RULE_lineActionWithLimit = 4, RULE_lineAction = 5, RULE_exitsAction = 6, 
		RULE_logicalAction = 7, RULE_ifAction = 8, RULE_infoSizeAction = 9, RULE_infoAction = 10, 
		RULE_printActionParameters = 11, RULE_headAction = 12, RULE_addAction = 13, 
		RULE_splitMaxColumn = 14, RULE_splitMinColumn = 15, RULE_splitSumColumn = 16, 
		RULE_splitOperations = 17, RULE_splitAction = 18, RULE_copyAction = 19, 
		RULE_iterativeOutputAction = 20, RULE_forAction = 21, RULE_iterativeAction = 22;
	public static final String[] ruleNames = {
		"program", "statement", "actionStatement", "printAction", "lineActionWithLimit", 
		"lineAction", "exitsAction", "logicalAction", "ifAction", "infoSizeAction", 
		"infoAction", "printActionParameters", "headAction", "addAction", "splitMaxColumn", 
		"splitMinColumn", "splitSumColumn", "splitOperations", "splitAction", 
		"copyAction", "iterativeOutputAction", "forAction", "iterativeAction"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'print'", "'to'", "'if'", "'for'", "'='", "'add'", 
		"'copy'", "'split'", "'line'", "'head'", "'info'", "'exists'", "'with'", 
		"'max-column'", "'min-column'", "'sum-column'", "'format-size'", "'mb'", 
		"'b'", "'kb'", "'gb'", "'end'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "Print", "To", "If", "For", "ForIndex", "Add", "Copy", 
		"Split", "Line", "Head", "Info", "Exists", "With", "MaxColumn", "MinColumn", 
		"SumColumn", "FormatSize", "MegaBytes", "Bytes", "KiloBytes", "GigaBytes", 
		"End", "Number", "FileNameText", "ID", "StringInput", "Ws"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PoleLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PoleLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PoleLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				statement();
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Print) | (1L << For) | (1L << Add) | (1L << Split))) != 0) );
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ActionStatementContext actionStatement() {
			return getRuleContext(ActionStatementContext.class,0);
		}
		public CopyActionContext copyAction() {
			return getRuleContext(CopyActionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			actionStatement();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Copy) {
				{
				setState(54);
				copyAction();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionStatementContext extends ParserRuleContext {
		public PrintActionContext printAction() {
			return getRuleContext(PrintActionContext.class,0);
		}
		public AddActionContext addAction() {
			return getRuleContext(AddActionContext.class,0);
		}
		public SplitActionContext splitAction() {
			return getRuleContext(SplitActionContext.class,0);
		}
		public IterativeActionContext iterativeAction() {
			return getRuleContext(IterativeActionContext.class,0);
		}
		public ActionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterActionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitActionStatement(this);
		}
	}

	public final ActionStatementContext actionStatement() throws RecognitionException {
		ActionStatementContext _localctx = new ActionStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_actionStatement);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Print:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				printAction();
				}
				break;
			case Add:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				addAction();
				}
				break;
			case Split:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				splitAction();
				}
				break;
			case For:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				iterativeAction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintActionContext extends ParserRuleContext {
		public TerminalNode Print() { return getToken(PoleLangParser.Print, 0); }
		public TerminalNode FileNameText() { return getToken(PoleLangParser.FileNameText, 0); }
		public PrintActionParametersContext printActionParameters() {
			return getRuleContext(PrintActionParametersContext.class,0);
		}
		public PrintActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterPrintAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitPrintAction(this);
		}
	}

	public final PrintActionContext printAction() throws RecognitionException {
		PrintActionContext _localctx = new PrintActionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_printAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(Print);
			setState(64);
			match(FileNameText);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << Line) | (1L << Info))) != 0)) {
				{
				setState(65);
				printActionParameters();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineActionWithLimitContext extends ParserRuleContext {
		public TerminalNode To() { return getToken(PoleLangParser.To, 0); }
		public TerminalNode Number() { return getToken(PoleLangParser.Number, 0); }
		public TerminalNode End() { return getToken(PoleLangParser.End, 0); }
		public LineActionWithLimitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineActionWithLimit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterLineActionWithLimit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitLineActionWithLimit(this);
		}
	}

	public final LineActionWithLimitContext lineActionWithLimit() throws RecognitionException {
		LineActionWithLimitContext _localctx = new LineActionWithLimitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lineActionWithLimit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(To);
			setState(69);
			_la = _input.LA(1);
			if ( !(_la==End || _la==Number) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineActionContext extends ParserRuleContext {
		public TerminalNode Line() { return getToken(PoleLangParser.Line, 0); }
		public TerminalNode Number() { return getToken(PoleLangParser.Number, 0); }
		public LineActionWithLimitContext lineActionWithLimit() {
			return getRuleContext(LineActionWithLimitContext.class,0);
		}
		public LineActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterLineAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitLineAction(this);
		}
	}

	public final LineActionContext lineAction() throws RecognitionException {
		LineActionContext _localctx = new LineActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lineAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(Line);
			setState(72);
			match(Number);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==To) {
				{
				setState(73);
				lineActionWithLimit();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExitsActionContext extends ParserRuleContext {
		public LineActionContext lineAction() {
			return getRuleContext(LineActionContext.class,0);
		}
		public TerminalNode Exists() { return getToken(PoleLangParser.Exists, 0); }
		public TerminalNode StringInput() { return getToken(PoleLangParser.StringInput, 0); }
		public ExitsActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exitsAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterExitsAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitExitsAction(this);
		}
	}

	public final ExitsActionContext exitsAction() throws RecognitionException {
		ExitsActionContext _localctx = new ExitsActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exitsAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			lineAction();
			setState(77);
			match(Exists);
			setState(78);
			match(StringInput);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalActionContext extends ParserRuleContext {
		public ExitsActionContext exitsAction() {
			return getRuleContext(ExitsActionContext.class,0);
		}
		public LogicalActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterLogicalAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitLogicalAction(this);
		}
	}

	public final LogicalActionContext logicalAction() throws RecognitionException {
		LogicalActionContext _localctx = new LogicalActionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicalAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			exitsAction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfActionContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(PoleLangParser.If, 0); }
		public LogicalActionContext logicalAction() {
			return getRuleContext(LogicalActionContext.class,0);
		}
		public IfActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterIfAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitIfAction(this);
		}
	}

	public final IfActionContext ifAction() throws RecognitionException {
		IfActionContext _localctx = new IfActionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(If);
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(83);
				match(T__0);
				setState(84);
				logicalAction();
				setState(85);
				match(T__1);
				}
				break;
			case Line:
				{
				setState(87);
				logicalAction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfoSizeActionContext extends ParserRuleContext {
		public TerminalNode Bytes() { return getToken(PoleLangParser.Bytes, 0); }
		public TerminalNode KiloBytes() { return getToken(PoleLangParser.KiloBytes, 0); }
		public TerminalNode MegaBytes() { return getToken(PoleLangParser.MegaBytes, 0); }
		public TerminalNode GigaBytes() { return getToken(PoleLangParser.GigaBytes, 0); }
		public InfoSizeActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infoSizeAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterInfoSizeAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitInfoSizeAction(this);
		}
	}

	public final InfoSizeActionContext infoSizeAction() throws RecognitionException {
		InfoSizeActionContext _localctx = new InfoSizeActionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_infoSizeAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MegaBytes) | (1L << Bytes) | (1L << KiloBytes) | (1L << GigaBytes))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfoActionContext extends ParserRuleContext {
		public TerminalNode Info() { return getToken(PoleLangParser.Info, 0); }
		public TerminalNode With() { return getToken(PoleLangParser.With, 0); }
		public TerminalNode FormatSize() { return getToken(PoleLangParser.FormatSize, 0); }
		public InfoSizeActionContext infoSizeAction() {
			return getRuleContext(InfoSizeActionContext.class,0);
		}
		public InfoActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infoAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterInfoAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitInfoAction(this);
		}
	}

	public final InfoActionContext infoAction() throws RecognitionException {
		InfoActionContext _localctx = new InfoActionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_infoAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(Info);
			setState(93);
			match(With);
			setState(94);
			match(FormatSize);
			setState(95);
			infoSizeAction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintActionParametersContext extends ParserRuleContext {
		public LineActionContext lineAction() {
			return getRuleContext(LineActionContext.class,0);
		}
		public IfActionContext ifAction() {
			return getRuleContext(IfActionContext.class,0);
		}
		public InfoActionContext infoAction() {
			return getRuleContext(InfoActionContext.class,0);
		}
		public PrintActionParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printActionParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterPrintActionParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitPrintActionParameters(this);
		}
	}

	public final PrintActionParametersContext printActionParameters() throws RecognitionException {
		PrintActionParametersContext _localctx = new PrintActionParametersContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_printActionParameters);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Line:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				lineAction();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				ifAction();
				}
				break;
			case Info:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				infoAction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadActionContext extends ParserRuleContext {
		public TerminalNode Head() { return getToken(PoleLangParser.Head, 0); }
		public HeadActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterHeadAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitHeadAction(this);
		}
	}

	public final HeadActionContext headAction() throws RecognitionException {
		HeadActionContext _localctx = new HeadActionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_headAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(Head);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddActionContext extends ParserRuleContext {
		public TerminalNode Add() { return getToken(PoleLangParser.Add, 0); }
		public TerminalNode StringInput() { return getToken(PoleLangParser.StringInput, 0); }
		public TerminalNode To() { return getToken(PoleLangParser.To, 0); }
		public TerminalNode FileNameText() { return getToken(PoleLangParser.FileNameText, 0); }
		public HeadActionContext headAction() {
			return getRuleContext(HeadActionContext.class,0);
		}
		public AddActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addAction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterAddAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitAddAction(this);
		}
	}

	public final AddActionContext addAction() throws RecognitionException {
		AddActionContext _localctx = new AddActionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_addAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(Add);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Head) {
				{
				setState(105);
				headAction();
				}
			}

			setState(108);
			match(StringInput);
			setState(109);
			match(To);
			setState(110);
			match(FileNameText);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitMaxColumnContext extends ParserRuleContext {
		public TerminalNode MaxColumn() { return getToken(PoleLangParser.MaxColumn, 0); }
		public TerminalNode Number() { return getToken(PoleLangParser.Number, 0); }
		public SplitMaxColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitMaxColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterSplitMaxColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitSplitMaxColumn(this);
		}
	}

	public final SplitMaxColumnContext splitMaxColumn() throws RecognitionException {
		SplitMaxColumnContext _localctx = new SplitMaxColumnContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_splitMaxColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(MaxColumn);
			setState(113);
			match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitMinColumnContext extends ParserRuleContext {
		public TerminalNode MinColumn() { return getToken(PoleLangParser.MinColumn, 0); }
		public TerminalNode Number() { return getToken(PoleLangParser.Number, 0); }
		public SplitMinColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitMinColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterSplitMinColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitSplitMinColumn(this);
		}
	}

	public final SplitMinColumnContext splitMinColumn() throws RecognitionException {
		SplitMinColumnContext _localctx = new SplitMinColumnContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_splitMinColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(MinColumn);
			setState(116);
			match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitSumColumnContext extends ParserRuleContext {
		public TerminalNode SumColumn() { return getToken(PoleLangParser.SumColumn, 0); }
		public TerminalNode Number() { return getToken(PoleLangParser.Number, 0); }
		public SplitSumColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitSumColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterSplitSumColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitSplitSumColumn(this);
		}
	}

	public final SplitSumColumnContext splitSumColumn() throws RecognitionException {
		SplitSumColumnContext _localctx = new SplitSumColumnContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_splitSumColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(SumColumn);
			setState(119);
			match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitOperationsContext extends ParserRuleContext {
		public SplitMaxColumnContext splitMaxColumn() {
			return getRuleContext(SplitMaxColumnContext.class,0);
		}
		public SplitMinColumnContext splitMinColumn() {
			return getRuleContext(SplitMinColumnContext.class,0);
		}
		public SplitSumColumnContext splitSumColumn() {
			return getRuleContext(SplitSumColumnContext.class,0);
		}
		public SplitOperationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitOperations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).enterSplitOperations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PoleLangListener ) ((PoleLangListener)listener).exitSplitOperations(this);
		}
	}
